package donnees

trait Sequential_process[T <: Task] extends Scheduler[T]  
{
  
}